# police_data_scraper

./: main.py  pyproject.toml
data/: lsoa_crime_stats.csv  lsoa_crimes
location_polygons/: bristol_021A.geojson  bristol_023A.geojson  bristol_023B.geojson  bristol_023C.geojson  bristol_023D.geojson  bristol_024F.geojson  bristol_024G.geojson  bristol_031B.geojson  bristol_east.geojson  bristol_north.geojson  bristol_south.geojson  bristol_west.geojson
