[project]
name = "policedatascraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "polars>=1.35.2",
    "project-paths>=1.1.1",
    "ratelimit>=2.2.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
]

[tool.project-paths]
locations = "./location_polygons"
data = "./data"
